重新增加index_new.js，使用更简洁的写法，skip和limit仍无效

--- a/widget/index.html
+++ b/widget/index.html
@@ -51,4 +51,4 @@
 
 </html>
 <script type="text/javascript" src="script/api.js"></script>
-<script type="text/javascript" src="script/index.js"></script>
+<script type="text/javascript" src="script/index_new.js"></script>
