修改配色，删除不需要的图片，增加注释块，修改每页数量为变量等

--- a/widget/html/newhis.html
+++ b/widget/html/newhis.html
@@ -11,7 +11,13 @@
     <style>
     header {
         position: relative;
-        background-color: #f2f2f2;
+        background-color: #655A55;
+        color: #FFF;
+    }
+
+    body {
+        background-color: #F7F3EA;
+        color: #655A55;
     }
 
     a,
@@ -65,6 +71,7 @@
     .his_label label {
         line-height: 50px;
         padding-left: 10px;
+        color: #655A55;
     }
 
     .uline {
