--- a/widget/index.html
+++ b/widget/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <style>
     header {
-        background-color: #f2f2f2;
+        background-color: #655A55;
         position: relative;
+        color: #FFF;
     }
 
     .top-button {
@@ -19,6 +20,12 @@
         height: 50px;
         line-height: 50px;
         font-size: 16px;
+    }
+
+    a,
+    a:visited {
+        text-decoration: none;
+        color: #FFF;
     }
 
     .fl {
