--- a/widget/index.html
+++ b/widget/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css" />
     <style>
     header {
-        background-color: #655A55;
+        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #7A6D67), color-stop(1, #59504B));
+        background-image: -webkit-linear-gradient(top, #7A6D67 0%, #59504B 100%);
+        background-image: linear-gradient(to bottom, #7A6D67 0%, #59504B 100%);
         position: relative;
         color: #FFF;
     }
