--- a/widget/index.html
+++ b/widget/index.html
@@ -60,4 +60,4 @@
 
 </html>
 <script type="text/javascript" src="script/api.js"></script>
-<script type="text/javascript" src="script/index_new.js"></script>
+<script type="text/javascript" src="script/index.js"></script>
