实现病历查看页面，修改功能待添加

--- a/widget/html/newhis.html
+++ b/widget/html/newhis.html
@@ -213,8 +213,8 @@ function saveHis() {
                 name: name.value,
                 sex: sex.value,
                 age: age.value,
-                info: info.value,
-                disease: info.value,
+                info: info,
+                disease: info,
                 comeDate: "2016-04-04"
             }
         },
