增加左滑删除功能，修改部分提示信息

--- a/widget/html/modihis.html
+++ b/widget/html/modihis.html
@@ -226,10 +226,10 @@ function saveHis() {
         },
         function(ret, err) {
             if (ret) {
-                alert("修改数据成功！");
+                alert("修改病历成功！");
                 window.closeWin();
             } else {
-                alert("修改数据失败！");
+                alert("修改病历失败！");
             }
         }
     );
