--- a/widget/html/newhis.html
+++ b/widget/html/newhis.html
@@ -220,10 +220,10 @@ function saveHis() {
         },
         function(ret, err) {
             if (ret) {
-                alert("插入数据成功！");
+                alert("新增病历成功！");
                 window.closeWin();
             } else {
-                alert("插入数据失败！");
+                alert("新增病历失败！");
             }
         }
     );
