新增和修改后，返回主页面刷新列表

--- a/widget/html/modihis.html
+++ b/widget/html/modihis.html
@@ -228,12 +228,19 @@ function saveHis() {
         function(ret, err) {
             if (ret) {
                 alert("修改病历成功！");
+                BacktoReload();
                 window.closeWin();
             } else {
                 alert("修改病历失败！");
             }
         }
     );
+}
+
+function BacktoReload() {
+    api.sendEvent({
+        name: 'reloadHis'
+    })
 }
 </script>
 
