--- a/widget/html/viewHistory.html
+++ b/widget/html/viewHistory.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
-    <title>新增病历</title>
+    <title>查看病历</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <script type="text/javascript" src="../script/api.js"></script>
@@ -141,18 +141,18 @@
         <header id='header'>
             <nav id="nav">
                 <a id="left" tapmode="" onclick="window.closeWin();">
-                    <span>取消</span>
+                    <span>返回</span>
                 </a>
                 <div id="middle">
-                    <span id="title">新增病历</span>
+                    <span id="title">查看病历</span>
                 </div>
-                <a id="right" tapmode="" onclick="saveHis();">
-                    <span>保存</span>
+                <a id="right" tapmode="" onclick="modiHistory();">
+                    <span>修改</span>
                 </a>
             </nav>
         </header>
         <div id="main">
-            <div class="field" onclick="openWin('addPatient')">
+            <div class="field" onclick="openWin('viewPatient')">
                 <div class="field_name">患者信息</div>
                 <div class="more"><span>&gt;</span></div>
             </div>
@@ -201,66 +201,21 @@ apiready = function() {
     // var header = document.querySelector('#header');
     // $api.fixIos7Bar(header);
     window.closeWin = function(winName) {
-        BacktoReload();
         api.closeWin();
     }
 
-    patient_pointer = [];
+    $api.attr($api.byId('consultation_department'), 'readonly', 'true');
+    $api.attr($api.byId('diagnosis'), 'readonly', 'true');
+    $api.attr($api.byId('chief_complaint'), 'readonly', 'true');
+    $api.attr($api.byId('treatment'), 'readonly', 'true');
 
-    api.addEventListener({
-        name: 'returnPatient'
-    }, function(ret, err) {
-        if (ret && ret.value) {
-            patient_pointer = ret.value;
-        }
-    });
+    $api.byId('consultation_department').value = api.pageParam.consultation_department;
+    $api.byId('diagnosis').value = api.pageParam.diagnosis;
+    $api.byId('chief_complaint').value = api.pageParam.chief_complaint;
+    $api.byId('treatment').value = api.pageParam.treatment;
 
-}
+    patient_pointer = api.pageParam.patient_pointer;
 
-function saveHis() {
-    var name = $api.byId('name');
-    var sex = $api.byId('sex');
-    var age = $api.byId('age');
-    // var info = $api.byId('ta_info');
-    var info = $api.byId('ta_info').innerHTML;
-
-    if (name.value == '') {
-        alert("请输入姓名!");
-        return;
-    }
-
-    if ($api.trim(info) == '') {
-        alert("请输入病情!");
-        return;
-    }
-
-    var model = api.require('model');
-    model.config({
-        appId: 'A6903478274381',
-        appKey: '460A4799-0424-A29B-6809-F06FDF1D888F',
-        host: 'https://d.apicloud.com'
-    });
-    model.insert({
-            class: 'history',
-            value: {
-                name: name.value,
-                sex: sex.value,
-                age: age.value,
-                info: info,
-                disease: info,
-                comeDate: getDate()
-            }
-        },
-        function(ret, err) {
-            if (ret) {
-                alert("新增病历成功！");
-                BacktoReload();
-                window.closeWin();
-            } else {
-                alert("新增病历失败！");
-            }
-        }
-    );
 }
 
 /**
@@ -278,6 +233,10 @@ function openWin(type) {
         reload: false,
         bounces: false
     });
+}
+
+function modiHistory() {
+
 }
 
 function BacktoReload() {
