--- a/widget/html/addPatient.html
+++ b/widget/html/addPatient.html
@@ -140,7 +140,7 @@
             <div class="field">
                 <div class="field_name">出生日期:</div>
                 <div>
-                    <input type="text" id="birthday" />
+                    <input type="text" id="birthday" onchange="getAge()"/>
                 </div>
             </div>
             <div class="field">
@@ -217,51 +217,18 @@ function returnPatient() {
     });
 }
 
-// function saveHis() {
-//     var name = $api.byId('name');
-//     var sex = $api.byId('sex');
-//     var age = $api.byId('age');
-//     // var info = $api.byId('ta_info');
-//     var info = $api.byId('ta_info').innerHTML;
+function getAge() {
+    var r = $api.byId('birthday').value.match(/^(\d{1,4})(-|\/)(\d{1,2})\2(\d{1,2})$/);
+    if (r == null) {
+        return false;
+    }
+    var d = new Date(r[1], r[3] - 1, r[4]);
+    if (d.getFullYear() == r[1] && (d.getMonth() + 1) == r[3] && d.getDate() == r[4]) {
+        var Y = new Date().getFullYear();
+        $api.byId('age').value = (Y-r[1]);
+    }
+}
 
-//     if (name.value == '') {
-//         alert("请输入姓名!");
-//         return;
-//     }
-
-//     if ($api.trim(info) == '') {
-//         alert("请输入病情!");
-//         return;
-//     }
-
-//     var model = api.require('model');
-//     model.config({
-//         appId: 'A6903478274381',
-//         appKey: '460A4799-0424-A29B-6809-F06FDF1D888F',
-//         host: 'https://d.apicloud.com'
-//     });
-//     model.insert({
-//             class: 'history',
-//             value: {
-//                 name: name.value,
-//                 sex: sex.value,
-//                 age: age.value,
-//                 info: info,
-//                 disease: info,
-//                 comeDate: getDate()
-//             }
-//         },
-//         function(ret, err) {
-//             if (ret) {
-//                 alert("新增病历成功！");
-//                 BacktoReload();
-//                 window.closeWin();
-//             } else {
-//                 alert("新增病历失败！");
-//             }
-//         }
-//     );
-// }
 </script>
 
 </html>
