--- a/widget/html/addPatient.html
+++ b/widget/html/addPatient.html
@@ -140,7 +140,7 @@
             <div class="field">
                 <div class="field_name">出生日期:</div>
                 <div>
-                    <input type="text" id="birthday" onchange="getAge()"/>
+                    <input type="text" id="birthday" onblur="getAge()"/>
                 </div>
             </div>
             <div class="field">
