--- a/widget/html/viewHistory.html
+++ b/widget/html/viewHistory.html
@@ -146,7 +146,7 @@
                 <div id="middle">
                     <span id="title">查看病历</span>
                 </div>
-                <a id="right" tapmode="" onclick="openWin(modiHistory);">
+                <a id="right" tapmode="" onclick="openWin('modiHistory');">
                     <span>修改</span>
                 </a>
             </nav>
@@ -217,12 +217,13 @@ apiready = function() {
     $api.attr($api.byId('chief_complaint'), 'readonly', 'true');
     $api.attr($api.byId('treatment'), 'readonly', 'true');
 
-    $api.byId('consultation_department').value = api.pageParam.consultation_department;
-    $api.byId('diagnosis').value = api.pageParam.diagnosis;
-    $api.byId('chief_complaint').value = api.pageParam.chief_complaint;
-    $api.byId('treatment').value = api.pageParam.treatment;
+    var data = api.pageParam;
+    $api.byId('consultation_department').value = data.consultation_department;
+    $api.byId('diagnosis').value = data.diagnosis;
+    $api.byId('chief_complaint').value = data.chief_complaint;
+    $api.byId('treatment').value = data.treatment;
 
-    patient_pointer = api.pageParam.patient_pointer;
+    patient_pointer = data.patient_pointer;
 
 }
 
@@ -232,15 +233,24 @@ apiready = function() {
  * @return {[type]}      [description]
  */
 function openWin(type) {
-    var data = [];
     var reload = false;
+    var pageParam = {};
+    var page = "";
     switch (type) {
         case "viewPatient":
-            data = patient_pointer;
+            page = "viewPatient";
+            pageParam = {
+                "data": patient_pointer,
+                "type": "view"
+            };
             reload = false;
             break;
         case "modiHistory":
-            data = api.pageParam;
+            page = "addHistory";
+            pageParam = {
+                "data": api.pageParam,
+                "type": "modi"
+            };
             reload = false;
             break;
         default:
@@ -248,10 +258,8 @@ function openWin(type) {
     }
     api.openWin({
         name: type,
-        url: './' + type + '.html',
-        pageParam: {
-            data: data
-        },
+        url: './' + page + '.html',
+        pageParam: pageParam,
         reload: reload,
         bounces: false
     });
