--- a/widget/html/viewPatient.html
+++ b/widget/html/viewPatient.html
@@ -7,106 +7,9 @@
     <title>患者信息</title>
     <link rel="stylesheet" type="text/css" href="../css/api.css" />
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
+    <link rel="stylesheet" type="text/css" href="../css/history.css" />
     <script type="text/javascript" src="../script/api.js"></script>
     <script type="text/javascript" src="../script/util.js"></script>
-    <style>
-    header {
-        position: fixed;
-        left: 0;
-        top: 0;
-        width: 100%;
-        color: #FFF;
-        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #7A6D67), color-stop(1, #59504B));
-        background-image: -webkit-linear-gradient(top, #7A6D67 0%, #59504B 100%);
-        background-image: linear-gradient(to bottom, #7A6D67 0%, #59504B 100%);
-        height: 50px;
-        line-height: 50px;
-    }
-
-    body {
-        background-color: #F7F3EA;
-        color: #655A55;
-    }
-
-    a,
-    a:visited {
-        text-decoration: none;
-    }
-
-    #nav {
-        display: -webkit-box;
-        height: 50px;
-        line-height: 50px;
-    }
-
-    #left {
-        width: 50px;
-    }
-
-    #left>span {
-        margin-left: 18px;
-        font-size: 16px;
-    }
-
-    #middle {
-        -webkit-box-flex: 1;
-        width: 100%;
-        display: -webkit-box;
-        -webkit-box-pack: center;
-        -webkit-box-align: center;
-    }
-
-    #title {
-        font-size: 18px;
-        text-align: center;
-    }
-
-    #right {
-        width: 50px;
-    }
-
-    #right>span {
-        margin-right: 18px;
-        font-size: 16px;
-    }
-
-    #main {
-        width: 100%;
-        margin-top: 50px;
-        background: #F7F3EA;
-    }
-
-    .field {
-        height: 40px;
-        font-size: 16px;
-        line-height: 40px;
-        padding-left: 10px;
-        padding-right: 10px;
-        color: #655A55;
-        border-bottom: 1px;
-        border-style: solid;
-        border-color: #EED6B0;
-    }
-
-    .no_underline {
-        border-bottom: 0px;
-    }
-
-    .field_name {
-        float: left;
-    }
-
-    .more {
-        float: right;
-    }
-
-    input {
-        margin-left: 10px;
-        width: 200px;
-        overflow-x: visible;
-        overflow-y: visible;
-    }
-    </style>
 </head>
 
 <body>
